--- a/application.json
+++ b/application.json
@@ -27,7 +27,7 @@
   "collapseInvisibleWidgets": true,
   "color": "#D6D1F2",
   "evaluationVersion": 2,
-  "icon": "diamond",
+  "icon": "bag",
   "pages": [
     {
       "id": "Instructions",
